Fix unread indicator colour, position on iOS

--- a/kirakiratter.css
+++ b/kirakiratter.css
@@ -656,7 +656,8 @@ button.icon-button i.fa-retweet:hover {
 
 .status-list__unread-indicator,
 .notifications__unread-indicator {
-  background: radial-gradient(ellipse, rgba(237, 100, 156,0.23) 0%, rgba(43,144,217,0) 60%);
+  background: radial-gradient(ellipse, rgba(237, 100, 156,0.23) 0%, rgba(237, 100, 156,0) 60%);
+  transform: translate(0,0);
 }
 
 /* Katsu Drawer & Search */
